--- a/代码/HelloQt/welcome.ui
+++ b/代码/HelloQt/welcome.ui
@@ -16,8 +16,8 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>60</y>
+     <x>60</x>
+     <y>90</y>
      <width>181</width>
      <height>81</height>
     </rect>
@@ -37,6 +37,32 @@
    </property>
    <property name="text">
     <string>进入程序</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="layoutBtn">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>110</y>
+     <width>101</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>布局演示</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="openBtn">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>170</y>
+     <width>101</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>打开文件</string>
    </property>
   </widget>
  </widget>
